--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "ai-prediction-api",
+  "name": "vannhat-sunwin-api",
   "version": "1.0.0",
-  "description": "API dự đoán kết quả Tài Xỉu dựa trên thuật toán AI tổng hợp",
+  "description": "API dự đoán Tài Xỉu bằng thuật toán AI VANNHAT.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "api",
     "taixiu",
+    "sunwin",
     "prediction",
-    "ai",
-    "game"
+    "vannhat"
   ],
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2",
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
+    "axios": "^1.6.0",
+    "express": "^4.18.2"
   }
 }
