--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "vannhat-sunwin-api",
+  "name": "sunwin-taixiu-bot",
   "version": "1.0.0",
-  "description": "API dự đoán Tài Xỉu bằng thuật toán AI VANNHAT.",
+  "description": "A WebSocket bot to track and predict Sunwin Tài Xỉu results.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "keywords": [
-    "api",
+    "websocket",
     "taixiu",
     "sunwin",
-    "prediction",
-    "vannhat"
+    "bot",
+    "nodejs"
   ],
-  "author": "Your Name",
+  "author": "cstool001",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "ws": "^8.18.0"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
