--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "sunwin-taixiu-fastify-bot",
+  "name": "sunwin-taixiu-api",
   "version": "1.0.0",
-  "description": "An advanced WebSocket bot using Fastify to track and predict Sunwin Tài Xỉu results.",
+  "description": "API dự đoán Tài Xỉu SunWin",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "fastify",
-    "websocket",
-    "taixiu",
-    "sunwin",
-    "bot",
-    "nodejs"
-  ],
-  "author": "cstool001",
-  "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "fastify": "^4.28.0",
-    "ws": "^8.18.0"
+    "@fastify/cors": "^8.2.1",
+    "fastify": "^4.17.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "ws": "^8.13.0"
   },
-  "engines": {
-    "node": ">=18.x"
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
